syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.fdblucene";
option java_outer_classname = "FDBIndexerProto";

package fdbindexer;

// Interface exported by the server.
service FDBIndexer {
  // A client-to-server streaming RPC.
  //
  // Accepts a stream of FieldValues
  // FieldsIndexed returns number of fields indexed
  rpc IndexFields(stream FieldValues) returns (FieldsIndexed) {}
}

message FieldValues {
  string field = 1;
  string value = 2;
}

message FieldsIndexed {
  // The number of fields indexed
  int32 fieldcount = 1;
}
